added container class

--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -14,38 +14,40 @@
 <body id="body">
 	<!--Logo and Navigational Header here-->
 	<header class="site-header" id="site-header">
-		<div class="logo">
-			<img src="img/logo.png" alt="Logo">
+		<div class="container">
+			<div class="logo">
+				<img src="img/logo.png" alt="Logo">
+			</div>
+			<h1 id="head-1" class="head">Madame Miaou's Musings</h1>
+			<nav class="main-nav-container">
+				<ul class="header-li clearfix">
+					<li>
+						<div class="header-li" id="home-li">
+							<a href="https://www.madamemiaou.com">Home</a>
+						</div>
+					</li>
+					<li>
+						<div class="header-li" id="about-li">
+							<a href="https://www.madamemiaou.com/about">About</a>
+						</div>
+					</li>
+					<li>
+						<div class="header-li" id="contact-li">
+							<a href="https://www.madamemiaou.com/contact">Contact</a>
+						</div>
+					</li>
+					<li>
+						<div class="header-li" id="work-li">
+							<a href="https://www.madamemiaou.com/work">Work</a>
+						</div>
+					</li>
+				</ul>
+			</nav>
 		</div>
-		<h1 id="head-1" class="head">Madame Miaou's Musings</h1>
-		<nav class="main-nav-container">
-			<ul class="header-li clearfix">
-				<li>
-					<div class="header-li" id="home-li">
-						<a href="https://www.madamemiaou.com">Home</a>
-					</div>
-				</li>
-				<li>
-					<div class="header-li" id="about-li">
-						<a href="https://www.madamemiaou.com/about">About</a>
-					</div>
-				</li>
-				<li>
-					<div class="header-li" id="contact-li">
-						<a href="https://www.madamemiaou.com/contact">Contact</a>
-					</div>
-				</li>
-				<li>
-					<div class="header-li" id="work-li">
-						<a href="https://www.madamemiaou.com/work">Work</a>
-					</div>
-				</li>
-			</ul>
-		</nav>
 	</header>
 
 	<!--Main Article of page begins here-->
-	<main class="main clearfix" id="main">
+	<main class="main container clearfix" id="main">
 		<article class="main-article">
 
 			<!--First Section of Main Article-->
@@ -100,7 +102,7 @@
 
 	<!--Footer starts here-->
 	<footer class="footer" id="footer">
-		<div class="footer-container">
+		<div class="container">
 
 			<!--Copyright information-->
 			<section class="section" id="cr-footer-sec">
@@ -111,7 +113,7 @@
 
 			<!--Social media links-->
 			<section class="section" id="pic-footer-sec">
-				<nav class="footer-nav-container desktop-nav">
+				<nav class="footer-nav-container">
 					<ul class="footer-li clearfix">
 						<li>
 							<a href="https://www.facebook.com"><img src="img/facebook.png" alt="Facebook Logo"></a>
