swapped position of classes and ids

--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -13,31 +13,33 @@
 
 <body id="body">
 	<!--Logo and Navigational Header here-->
-	<header class="site-header" id="site-header">
+	<header id="site-header" class="site-header">
 		<div class="container">
 			<div class="logo">
 				<img src="img/logo.png" alt="Logo">
 			</div>
 			<h1 id="head-1" class="head">Madame Miaou's Musings</h1>
+
+			<!--Navigational Links here-->
 			<nav class="main-nav-container">
 				<ul class="header-li clearfix">
 					<li>
-						<div class="header-li" id="home-li">
+						<div id="home-li" class="header-li">
 							<a href="https://www.madamemiaou.com">Home</a>
 						</div>
 					</li>
 					<li>
-						<div class="header-li" id="about-li">
+						<div id="about-li" class="header-li">
 							<a href="https://www.madamemiaou.com/about">About</a>
 						</div>
 					</li>
 					<li>
-						<div class="header-li" id="contact-li">
+						<div id="contact-li" class="header-li">
 							<a href="https://www.madamemiaou.com/contact">Contact</a>
 						</div>
 					</li>
 					<li>
-						<div class="header-li" id="work-li">
+						<div id="work-li" class="header-li">
 							<a href="https://www.madamemiaou.com/work">Work</a>
 						</div>
 					</li>
@@ -47,11 +49,11 @@
 	</header>
 
 	<!--Main Article of page begins here-->
-	<main class="main container clearfix" id="main">
+	<main id="main" class="main container clearfix">
 		<article class="main-article">
 
 			<!--First Section of Main Article-->
-			<section class="section" id="sec-writ">
+			<section id="sec-writ" class="section">
 				<h2 id="main-head" class="head">Madame Miaou's Meow</h2>
 				<p id="main-para-1" class="para"> 
 					Cat ipsum dolor sit amet, culpa and aspernatur. Ratione et eum aliqua non eum but vitae. Eius dolor voluptas, excepteur fugiat or quis. Quam labore perspiciatis eiusmod nostrud dicta. Deserunt quisquam tempor. Suscipit. Quae. Sit sit nihil. Voluptas quasi for vitae autem for incididunt. Elit. Tempora ullam elit for cupidatat so aut inventore. Eum aute vel cupidatat for lorem, magni unde. Laboriosam autem ipsum. Do ab exercitationem accusantium dolorem. Incidunt laborum eiusmod or si. Id exercitationem yet eaque. Reprehenderit officia but elit and ipsa. Eos sequi so odit, mollit quae. Sunt inventore voluptas. Cupidatat ullam but ut but consequat so dolorem. Cupidatat commodo. Nequeporro natus.
@@ -60,6 +62,7 @@
 				<p id="main-para-2" class="para">
 					Quisquam cupidatat quis iure. Quia totam rem eius odit but omnis so ullam. Aliqua proident. Et eu consectetur. Inventore pariatur dolore voluptas molestiae for cillum. Amet quo odit aliquip and fugiat ullamco. Magni autem numquam for magna or minim. Eum. Cupidatat non mollit dolore sunt. Excepteur irure eu or consectetur and doloremque. Laboris cillum. Si veniam, or ratione, accusantium minima reprehenderit but nisi. Qui duis, for ex occaecat omnis exercitation vel. Voluptas dicta duis eos yet occaecat or adipisci totam. Rem. Fugit ullamco, tempor. Ipsum velitesse magna. Corporis elit quis aliquid. Laboris excepteur yet nesciunt yet beatae for unde. 
 				</p>
+
 				<!--Aside here-->
 				<aside id="main-aside" class="main-article">
 					<div class="aside-img">
@@ -75,7 +78,7 @@
 			</section>
 
 			<!--Second Section of Main Article here-->
-			<section class="section" id="sec-pic">
+			<section id="sec-pic" class="section" >
 				<h3 id="head-3" class="head">More Madame Miaou</h3>
 				<div class="pic-container clearfix"></div>
 					<div class="pic-slide">
@@ -101,18 +104,18 @@
 	</main>
 
 	<!--Footer starts here-->
-	<footer class="footer" id="footer">
+	<footer id="footer" class="footer" >
 		<div class="container">
 
 			<!--Copyright information-->
-			<section class="section" id="cr-footer-sec">
-				<p class="para" id="footer-para">
+			<section id="cr-footer-sec" class="section">
+				<p id="footer-para" class="para" >
 					&copy;2020, All Rights Reserved.
 				</p>
 			</section>
 
 			<!--Social media links-->
-			<section class="section" id="pic-footer-sec">
+			<section id="soc-footer-sec" class="section" >
 				<nav class="footer-nav-container">
 					<ul class="footer-li clearfix">
 						<li>
