--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -18,7 +18,7 @@
 			<div class="logo">
 				<img src="img/logo.png" alt="Logo">
 			</div>
-			<h1 id="head-1" class="head">Madame Miaou's Musings</h1>
+			<h1 class="head-title">Madame Miaou's Musings</h1>
 
 			<!--Navigational Links here-->
 			<nav class="main-nav-container">
