added desktop-nav class, changed name of lilypads

--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -21,7 +21,7 @@
 			<h1 class="head-title">Madame Miaou's Musings</h1>
 
 			<!--Navigational Links here-->
-			<nav class="main-nav-container">
+			<nav class="main-nav-container desktop-nav">
 				<ul class="header-li clearfix">
 					<li>
 						<div id="home-li" class="header-li">
