updated classes and fixed aside

--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -13,15 +13,15 @@
 
 <body id="body">
 	<!--Logo and Navigational Header here-->
-	<header id="site-header" class="site-header">
+	<header id="site-header clearfix" class="site-header">
 		<div class="container">
 			<div class="logo">
 				<img src="img/logo.png" alt="Logo">
 			</div>
-			<h1 class="head-title">Madame Miaou's Musings</h1>
+			<h1 id="head-title" class="head-title text">Madame Miaou's Musings</h1>
 
 			<!--Navigational Links here-->
-			<nav class="main-nav-container desktop-nav">
+			<nav class="main-nav-container text desktop-nav">
 				<ul class="header-li clearfix">
 					<li>
 						<div id="home-li" class="header-li">
@@ -52,51 +52,52 @@
 	<main id="main" class="main container clearfix">
 		<article class="main-article">
 
-			<!--First Section of Main Article-->
-			<section id="sec-writ" class="section">
-				<h2 id="main-head" class="head">Madame Miaou's Meow</h2>
-				<p id="main-para-1" class="para"> 
+			<!-- Main Article-->
+			<section id="sec-writ" class="main-sec">
+				<h2 id="main-head" class="text">Madame Miaou's Meow</h2>
+				<p id="main-para-1" class="text"> 
 					Cat ipsum dolor sit amet, culpa and aspernatur. Ratione et eum aliqua non eum but vitae. Eius dolor voluptas, excepteur fugiat or quis. Quam labore perspiciatis eiusmod nostrud dicta. Deserunt quisquam tempor. Suscipit. Quae. Sit sit nihil. Voluptas quasi for vitae autem for incididunt. Elit. Tempora ullam elit for cupidatat so aut inventore. Eum aute vel cupidatat for lorem, magni unde. Laboriosam autem ipsum. Do ab exercitationem accusantium dolorem. Incidunt laborum eiusmod or si. Id exercitationem yet eaque. Reprehenderit officia but elit and ipsa. Eos sequi so odit, mollit quae. Sunt inventore voluptas. Cupidatat ullam but ut but consequat so dolorem. Cupidatat commodo. Nequeporro natus.
 				</p>
 				<br>
-				<p id="main-para-2" class="para">
+
+				<p id="main-para-2" class="text">
 					Quisquam cupidatat quis iure. Quia totam rem eius odit but omnis so ullam. Aliqua proident. Et eu consectetur. Inventore pariatur dolore voluptas molestiae for cillum. Amet quo odit aliquip and fugiat ullamco. Magni autem numquam for magna or minim. Eum. Cupidatat non mollit dolore sunt. Excepteur irure eu or consectetur and doloremque. Laboris cillum. Si veniam, or ratione, accusantium minima reprehenderit but nisi. Qui duis, for ex occaecat omnis exercitation vel. Voluptas dicta duis eos yet occaecat or adipisci totam. Rem. Fugit ullamco, tempor. Ipsum velitesse magna. Corporis elit quis aliquid. Laboris excepteur yet nesciunt yet beatae for unde. 
 				</p>
-
-				<!--Aside here-->
-				<aside id="main-aside" class="main-article">
-					<div class="aside-img">
-						<figure>
-							<img src="img/ginger-tabby.jpg" alt="Ginger Tabby Kitten">
-						</figure>
-					</div>
-					<h3 id="head-2" class="head">Meet Madame Miaou</h3>
-					<p id="aside-para" class="para">
-						Cat ipsum dolor sit amet, himalayan. Devonshire rex ocelot. Ragdoll egyptian mau. American shorthair ocelot. Lynx russian blue, norwegian forest yet grimalkin american shorthair. Devonshire rex puma norwegian forest. Norwegian forest mouser or thai so havana brown. Abyssinian kitten. American bobtail maine coon scottish fold or thai sphynx tom. Burmese puma for birman norwegian forest. Ocicat kitty siamese for american shorthair and siamese. Tom mouser, donskoy lion yet munchkin savannah. Tom himalayan, american bobtail for lion but tabby thai manx. 
-					</p>
-				</aside>
 			</section>
 
+			<!--Aside here-->
+			<aside id="main-aside" class="main-aside-con clearfix">
+				<div class="aside-img">
+					<figure class="aside-img">
+						<img src="img/ginger-tabby.jpg" alt="Ginger Tabby Kitten">
+					</figure>
+				</div>
+				<h3 id="head-3" class="aside-head text">Meet Madame Miaou</h3>
+				<p id="aside-para" class="text">
+					Cat ipsum dolor sit amet, himalayan. Devonshire rex ocelot. Ragdoll egyptian mau. American shorthair ocelot. Lynx russian blue, norwegian forest yet grimalkin american shorthair. Devonshire rex puma norwegian forest. Norwegian forest mouser or thai so havana brown. Abyssinian kitten. American bobtail maine coon scottish fold or thai sphynx tom. Burmese puma for birman norwegian forest. Ocicat kitty siamese for american shorthair and siamese. Tom mouser, donskoy lion yet munchkin savannah. Tom himalayan, american bobtail for lion but tabby thai manx. 
+				</p>
+			</aside>
+
 			<!--Second Section of Main Article here-->
-			<section id="sec-pic" class="section" >
-				<h3 id="head-3" class="head">More Madame Miaou</h3>
-				<div class="pic-container clearfix"></div>
+			<section id="sec-pic" class="section2" >
+				<h3 id="head-3" class="text">More Madame Miaou</h3>
+				<div class="pic-container"></div>
 					<div class="pic-slide">
 						<figure>
 							<img src="img/tummy-kitten.jpg" alt="Grey Kitten Showing Tummy">
-							<figcaption>My Sister Sally</figcaption>
+							<figcaption class="text">My Sister Sally</figcaption>
 						</figure>	
 					</div>
 					<div class="pic-slide"> 
 						<figure>
 							<img src="img/tree-kitten.jpg" alt="Brown Kitten in Tree">
-							<figcaption>My Brother Breannan</figcaption>
+							<figcaption class="text">My Brother Breannan</figcaption>
 						</figure>
 					</div>
 					<div class="pic-slide">
 						<figure>
 							<img src="img/sleeping-kitten.jpg" alt="Tabby Kitten Sleeping">
-							<figcaption>My Cousin Clementine</figcaption>
+							<figcaption class="text">My Cousin Clementine</figcaption>
 						</figure>
 					</div>
 			</section>
@@ -109,7 +110,7 @@
 
 			<!--Copyright information-->
 			<section id="cr-footer-sec" class="section">
-				<p id="footer-para" class="para" >
+				<p id="footer-para" class="text">
 					&copy;2020, All Rights Reserved.
 				</p>
 			</section>
