--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -109,16 +109,16 @@
 		<div class="container">
 
 			<!--Copyright information-->
-			<section id="cr-footer-sec" class="section">
+			<section id="cr-sec" class="cr-sec">
 				<p id="footer-para" class="text">
 					&copy;2020, All Rights Reserved.
 				</p>
 			</section>
 
 			<!--Social media links-->
-			<section id="soc-footer-sec" class="section" >
-				<nav class="footer-nav-container">
-					<ul class="footer-li clearfix">
+			<section id="socials-sec" class="socials-sec" >
+				<nav class="footer-nav-container clearfix">
+					<ul class="footer-li">
 						<li>
 							<a href="https://www.facebook.com"><img src="img/facebook.png" alt="Facebook Logo"></a>
 						</li>
