edited text, ids, and classes

--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -13,7 +13,7 @@
 
 <body id="body">
 	<!--Logo and Navigational Header here-->
-	<header id="site-header clearfix" class="site-header">
+	<header id="site-header" class="site-header clearfix">
 		<div class="container">
 			<div class="logo">
 				<img src="img/logo.png" alt="Logo">
@@ -21,8 +21,8 @@
 			<h1 id="head-title" class="head-title text">Madame Miaou's Musings</h1>
 
 			<!--Navigational Links here-->
-			<nav class="main-nav-container text desktop-nav">
-				<ul class="header-li clearfix">
+			<nav class="main-nav-container text desktop-nav clearfix">
+				<ul class="header-li">
 					<li>
 						<div id="home-li" class="header-li">
 							<a href="https://www.madamemiaou.com">Home</a>
@@ -72,15 +72,15 @@
 						<img src="img/ginger-tabby.jpg" alt="Ginger Tabby Kitten">
 					</figure>
 				</div>
-				<h3 id="head-3" class="aside-head text">Meet Madame Miaou</h3>
+				<h3 id="aside-head" class="aside-head text">Meet Madame Miaou</h3>
 				<p id="aside-para" class="text">
-					Cat ipsum dolor sit amet, himalayan. Devonshire rex ocelot. Ragdoll egyptian mau. American shorthair ocelot. Lynx russian blue, norwegian forest yet grimalkin american shorthair. Devonshire rex puma norwegian forest. Norwegian forest mouser or thai so havana brown. Abyssinian kitten. American bobtail maine coon scottish fold or thai sphynx tom. Burmese puma for birman norwegian forest. Ocicat kitty siamese for american shorthair and siamese. Tom mouser, donskoy lion yet munchkin savannah. Tom himalayan, american bobtail for lion but tabby thai manx. 
+					Cat ipsum dolor sit amet, himalayan. Devonshire rex ocelot. Ragdoll egyptian mau. American shorthair ocelot. Lynx russian blue, norwegian forest yet grimalkin american shorthair. Devonshire rex puma norwegian forest. Norwegian forest mouser or thai so havana brown.  
 				</p>
 			</aside>
 
 			<!--Second Section of Main Article here-->
 			<section id="sec-pic" class="section2" >
-				<h3 id="head-3" class="text">More Madame Miaou</h3>
+				<h3 id="pic-head" class="text">More Madame Miaou</h3>
 				<div class="pic-container"></div>
 					<div class="pic-slide">
 						<figure>
@@ -117,16 +117,22 @@
 
 			<!--Social media links-->
 			<section id="socials-sec" class="socials-sec" >
-				<nav class="footer-nav-container clearfix">
+				<nav class="footer-nav-con clearfix">
 					<ul class="footer-li">
 						<li>
-							<a href="https://www.facebook.com"><img src="img/facebook.png" alt="Facebook Logo"></a>
+							<div id="facebook-li" class="footer-li">
+								<a href="https://www.facebook.com"><img src="img/facebook.png" alt="Facebook Logo"></a>
+							</div>
 						</li>
 						<li>
-							<a href="https://www.youtube.com"><img src="img/youtube.png" alt="Youtube Logo"></a>
+							<div id="youtube-li" class="footer-li">
+								<a href="https://www.youtube.com"><img src="img/youtube.png" alt="Youtube Logo"></a>
+							</div>
 						</li>
 						<li>
-							<a href="https://www.twitter.com"><img src="img/twitter.png" alt="Twitter Logo"></a>
+							<div id="twitter-li" class="footer-li">
+								<a href="https://www.twitter.com"><img src="img/twitter.png" alt="Twitter Logo"></a>
+							</div>
 						</li>
 					</ul>
 				</nav>
