edited spacing, classes, and validated css and html

--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -66,7 +66,7 @@
 			</section>
 
 			<!--Aside here-->
-			<aside id="main-aside" class="main-aside-con clearfix">
+			<aside id="main-aside" class="main-aside-container clearfix">
 				<div class="aside-img">
 					<figure class="aside-img">
 						<img src="img/ginger-tabby.jpg" alt="Ginger Tabby Kitten">
@@ -74,7 +74,7 @@
 				</div>
 				<h3 id="aside-head" class="aside-head text">Meet Madame Miaou</h3>
 				<p id="aside-para" class="text">
-					Cat ipsum dolor sit amet, himalayan. Devonshire rex ocelot. Ragdoll egyptian mau. American shorthair ocelot. Lynx russian blue, norwegian forest yet grimalkin american shorthair. Devonshire rex puma norwegian forest. Norwegian forest mouser or thai so havana brown.  
+					Cat ipsum dolor sit amet, himalayan. Devonshire rex ocelot. Ragdoll egyptian mau. American shorthair ocelot. Lynx russian blue, norwegian forest yet grimalkin american shorthair. 
 				</p>
 			</aside>
 
@@ -82,7 +82,7 @@
 			<section id="sec-pic" class="section2" >
 				<h3 id="pic-head" class="text">More Madame Miaou</h3>
 				<div class="pic-container"></div>
-					<div class="pic-slide">
+					<div class="pic-slide-container">
 						<figure>
 							<img src="img/tummy-kitten.jpg" alt="Grey Kitten Showing Tummy">
 							<figcaption class="text">My Sister Sally</figcaption>
@@ -117,7 +117,7 @@
 
 			<!--Social media links-->
 			<section id="socials-sec" class="socials-sec" >
-				<nav class="footer-nav-con clearfix">
+				<nav class="footer-nav-container clearfix">
 					<ul class="footer-li">
 						<li>
 							<div id="facebook-li" class="footer-li">
