completed last question

--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -218,18 +218,14 @@
 		<li>
 			<p>
 				<strong>Ques:</strong>
-				How would you include/create an alert with string "I love JavaScript" using Javascript? 
+				How would you include/create an alert with string "I love JavaScript" using JavaScript? 
 			</p>
 			<p id="alert">
 				<strong>Ans:</strong>
-				<script type="text/javascript">
-					function alert() {
-						var alert = this.alert;
-						console.log(this);
-						this.innerHTML = "I love Javascript"
-						alert(I love JavaScript)
-					}
-				</script>
+					&#60;script type="text/javascript"&#62;alert("I love JavaSCript")&#60;/script&#62;
+					<script type="text/javascript">
+						alert("I love JavaScript");
+					</script>
 			</p>
 		</li>
   </ol>
