--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -79,7 +79,59 @@
 					<img src="img/ostrich.jpg" alt="Image of Ostrich Face" width="330px" height="230">
 				</div>
 			</aside>
-			
+			<!--End of Image Aside-->
+
+			<!--Schedule Section Begins Here-->
+			<section class="schedule-section">
+				<h2 class="spec-font">Schedule</h2>
+				<table class="sched-table">
+					<thead class="spec-font">
+						<tr>
+							<td>Time</td>
+							<td>Monday</td>
+							<td>Tuesday</td>
+							<td>Wednesday</td>
+							<td>Thursday</td>
+							<td>Friday</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>09:00-11:00</td>
+							<td>Communications I</td>
+							<td>Client Services</td>
+							<td>Special Collections</td>
+							<td>Directed Research Seminar</td>
+							<td>Client Services</td>
+						</tr>
+						<tr>
+							<td>11:00-12:30</td>
+							<td>Reference I</td>
+							<td>Internet App</td>
+							<td>Library Software</td>
+							<td>French</td>
+							<td>Reference</td>
+						</tr>
+						<tr>
+							<td>2:00-3:00</td>
+							<td>Acquisitions</td>
+							<td>Cataloguing</td>
+							<td>Client Services</td>
+							<td>Emerging Library Tech</td>
+							<td>Library Software</td>
+						</tr>
+						<tr>
+							<td>3:30-5:30</td>
+							<td>French</td>
+							<td>French</td>
+							<td>Acquisitions</td>
+							<td>Subject Analysis</td>
+							<td>Internet App</td>
+						</tr>
+					</tbody>
+				</table>
+			</section>
+			<!--End of Schedule Section-->
 		</article>
 		
 	</main>
