Completed form, profile, and footer

--- a/lib2024/final/index.html
+++ b/lib2024/final/index.html
@@ -132,6 +132,55 @@
 				</table>
 			</section>
 			<!--End of Schedule Section-->
+
+			<!--Profile Section Begins-->
+			<section class="profile-value-transfer cleafix">
+				<h2 class="spec-font">Edit Profile</h2>
+				<form id="form" action="submit.php" method="post">
+					<p>
+						<label for="name">Name:</label>
+						<input type="text" name="name" id="name" placeholder="Ollie Ostrich" required>
+					</p>
+					<p>
+						<label for="email">Email:</label>
+						<input type="email" name="email" id="email" placeholder="ollieostrich@outlook.com" required>
+					</p>
+					<p>
+						<label for="address">Address:</label>
+						<input type="text" name="address" id="address" placeholder="6969 Avian Alley" required>
+					</p>
+					<p>
+						<label for="city">City:</label>
+						<input type="text" name="city" id="city" placeholder="Pigeon Island" required>
+					</p>
+					<p>
+						<label for="province">Province</label>
+						<select name="province" id="province" required>
+							<option value="default">Select Province</option>
+							<option value="BC">British Columbia</option>
+							<option value="AB">Alberta</option>
+							<option value="SK">Saskatchewan</option>
+							<option value="MB">Manitoba</option>
+							<option value="ON">Ontario</option>
+							<option value="YT">Yukon</option>
+							<option value="NT">Northwest Territories</option>
+							<option value="NU">Nunavut</option>
+							<option value="NB">New Brunswick</option>
+							<option value="NS">Nova Scotia</option>
+							<option value="PE">Prince Edward Island</option>
+							<option value="NL">Newfoundland and Labrador</option>
+						</select>
+					</p>
+				</form>
+
+				<!--Profile Transfer Starts Here-->
+				<h2 class="spec-font">Profile Info</h2>
+
+				<!--Profile Transfer Ends Here-->
+			</section>
+			<!--Profile Section Ends-->
+
+			<!--Profile Info Section Begins Here-->
 		</article>
 		
 	</main>
